fix: text align for btn

--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -113,6 +113,7 @@ span {
   border-radius: 5px;
   font-size:     1.5rem;
   font-weight:   600;
+  text-align:    center;
   &:active {
     top: 3px;
   }
